--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="form">
         <div class="heading3">Personal Information</div>
         <div class="formElement">
-          <form action="http:// 192.168.29.174/php/insertData.php" method="post">
+          <form action="http://localhost/php/insertData.php" method="post">
             <div class="input1">
               <label for="name" class="name">Name</label>
               <input
